--- a/index.html
+++ b/index.html
@@ -124,8 +124,15 @@
         <h2 class="titulo" style="text-align: center;">TRABAJOS</h2>
         <div class="works-filter">
             <button class="filter-btn active" data-category="all">Todos</button>
-            <button class="filter-btn" data-category="bar">Bar</button>
-            <button class="filter-btn" data-category="cama">Cama</button>
+            <button class="filter-btn" data-category="baño">Baño</button>
+            <button class="filter-btn" data-category="casa">Casa country</button>
+            <button class="filter-btn" data-category="consul">Consultorio</button>
+            <button class="filter-btn" data-category="cocina">Cocina</button>
+            <button class="filter-btn" data-category="lab">Laboratorio</button>
+            <button class="filter-btn" data-category="living">Living/Comedor</button>
+            <button class="filter-btn" data-category="ofi">Oficina</button>
+            <button class="filter-btn" data-category="placard">Placard</button>
+            <button class="filter-btn" data-category="tabla">Banquetas</button>
             <button class="filter-btn" data-category="oficina">Oficina</button>
         </div>
         <div class="works-wrapper">
@@ -135,15 +142,22 @@
               </svg>
           </div>
          <div class="works-grid">
-            <div class="item" data-category="bar"><img src="assets/trabajo_bar.jpg" alt="Trabajo 1"></div>
-            <div class="item" data-category="bar"><img src="assets/trabajo_baño.jpg" alt="Trabajo 2"></div>
-            <div class="item" data-category="bar"><img src="assets/trabajo_cama.jpg" alt="Trabajo 3"></div>
-            <div class="item" data-category="cama"><img src="assets/trabajo_cocina.jpg" alt="Trabajo 4"></div>
-            <div class="item" data-category="cama"><img src="assets/trabajo_escalera.jpg" alt="Trabajo 5"></div>
-            <div class="item" data-category="cama"><img src="assets/trabajo_escritorio.jpg" alt="Trabajo 6"></div>
-            <div class="item" data-category="oficina"><img src="assets/trabajo_muebledivisor.jpg" alt="Trabajo 7"></div>
-            <div class="item" data-category="oficina"><img src="assets/trabajo_muebletv.jpg" alt="Trabajo 8"></div>
-            <div class="item" data-category="oficina"><img src="assets/trabajo_placard.jpg" alt="Trabajo 9"></div>
+            <div class="item" data-category="baño"><img src="assets/baños/baño.jpg" alt="Trabajo 1"></div>
+            <div class="item" data-category="casa"><img src="assets/casa_country/country1.JPG" alt="Trabajo 2"></div>
+            <div class="item" data-category="casa"><img src="assets/casa_country/country2.JPG" alt="Trabajo 3"></div>
+            <div class="item" data-category="casa"><img src="assets/casa_country/country3.JPG" alt="Trabajo 4"></div>
+            <div class="item" data-category="casa"><img src="assets/casa_country/country4.JPG" alt="Trabajo 5"></div>
+            <div class="item" data-category="casa"><img src="assets/casa_country/country5.JPG" alt="Trabajo 6"></div>
+            <div class="item" data-category="consul"><img src="assets/consultorios_odontologicos/consultorio1.jpg" alt="Trabajo 7"></div>
+            <div class="item" data-category="consul"><img src="assets/consultorios_odontologicos/consultorio2.jpg" alt="Trabajo 8"></div>
+            <div class="item" data-category="consul"><img src="assets/consultorios_odontologicos/consultorio3.jpg" alt="Trabajo 9"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina1.jpeg" alt="Trabajo 10"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina2.jpeg" alt="Trabajo 11"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina3.jpeg" alt="Trabajo 12"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina5.jpeg" alt="Trabajo 13"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina6.jpeg" alt="Trabajo 14"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina7.jpeg" alt="Trabajo 14"></div>
+            <div class="item" data-category=""><img src="" alt="Trabajo 15"></div>
         </div>
         <div class="d-md-none" id="nextBtn">
             <svg width="42" height="42" viewBox="0 0 24 24" fill="none">
