stats, footer, works

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Logo y nombre -->
     <div class="container-logo d-flex align-items-center">
-      <img src="./assets/Logo InterhausDesign-12.png" alt="Logo" width="30" height="30" class="logo">
+      <img src="assets/Logo InterhausDesign-min.png" alt="Logo" width="30" height="30" class="logo">
     </div>
 
     <!-- Botón hamburguesa -->
@@ -44,7 +44,7 @@
 <!-- MENU OFFCANVAS DESDE LA DERECHA -->
 <div class="offcanvas offcanvas-end custom-width" tabindex="-1" id="menuLateral" aria-labelledby="menuLateralLabel" style="background-color: #9EA6BA; color: white;">
   <div class="offcanvas-header">
-    <img src="./assets/Logo InterhausDesign-12.png" alt="">
+    <img src="assets/Logo InterhausDesign-min.png" alt="">
     <button type="button" class="btn-close" style="color:#232A3A;" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
   </div>
   <div class="offcanvas-body">
@@ -61,7 +61,7 @@
 
     <header id="nav-web" class="navbar">
       <div class="container-logo d-flex align-items-center">
-        <img src="./assets/Logo InterhausDesign-12.png" alt="Logo" width="30" height="30" class="logo">
+        <img src="assets/logo_barra.png" alt="Logo" width="30" height="30" class="logo">
       </div>
         <nav>
             <ul>
@@ -72,14 +72,12 @@
         </nav>
     </header>
 
- <div class="puntos-matriz"></div>
-
 
  <section class="home">
   <div class="texto-home">
-    <h1 class="titulo">Alberto <br>Moeller</h1>
-    <h3>ARQUITECTO Y CARPINTERO</h3>
-    <p style="color: white;" class="parrafo">Diseño y construcción de muebles de melamina</p>
+    <img class="logo-home" src="assets/logo_home.png" alt="">
+    <p class="parrafo">Diseño y fabricación de <br>
+         muebles contemporáneos</p>
   </div>
   <div class="img-home">
     <!-- imagen o fondo va aquí -->
@@ -90,19 +88,26 @@
 <div class="stats-wrapper">
   <div class="stats-bar">
     <div class="stat">
-      <img src="./assets/calendar-svgrepo-com.svg" alt="Icono calendario">
-      <div class="stat-num">+15</div>
-      <div class="stat-label">años de<br>experiencia</div>
+      <div class="stat-icon"><img src="assets/icono_calendario.png" alt="Icono calendario"></div>
+      <div class="stat-info">
+        <div class="stat-num">+40</div>
+        <div class="stat-label">años de<br>experiencia</div>
+      </div>
+
     </div>
     <div class="stat">
-      <img src="./assets/hammer-head-tool-fix-setting-svgrepo-com.svg" alt="Icono martillo">
-      <div class="stat-num">+300</div>
-      <div class="stat-label">proyectos<br>realizados</div>
+      <div class="stat.icon"><img src="assets/icono_martillo.png" alt="Icono martillo"></div>
+      <div class="stat-info">
+        <div class="stat-num">+1200</div>
+        <div class="stat-label">proyectos<br>realizados</div>
+      </div>
     </div>
     <div class="stat">
-      <img src="./assets/ruler-svgrepo-com.svg" alt="Icono regla">
-      <div class="stat-num">+100</div>
-      <div class="stat-label">clientes<br>satisfechos</div>
+      <div class="stat-icon"><img src="assets/icono_regla.png" alt="Icono regla"></div>
+      <div class="stat-info">
+        <div class="stat-num">+1000</div>
+        <div class="stat-label">clientes<br>satisfechos</div>
+    </div>
     </div>
   </div>
 </div>
@@ -151,7 +156,6 @@
             <option value="ofi">Oficina</option>
             <option value="placard">Placard</option>
             <option value="tabla">Banquetas</option>
-            <option value="oficina">Oficina</option>
           </select>
         </div>
 
@@ -174,10 +178,31 @@
             <div class="item" data-category="cocina"><img src="assets/cocinas/cocina1.jpeg" alt="Trabajo 10"></div>
             <div class="item" data-category="cocina"><img src="assets/cocinas/cocina2.jpeg" alt="Trabajo 11"></div>
             <div class="item" data-category="cocina"><img src="assets/cocinas/cocina3.jpeg" alt="Trabajo 12"></div>
-            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina5.jpeg" alt="Trabajo 13"></div>
-            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina6.jpeg" alt="Trabajo 14"></div>
-            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina7.jpeg" alt="Trabajo 14"></div>
-            <div class="item" data-category=""><img src="" alt="Trabajo 15"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina4.jpeg" alt="Trabajo 13"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina5.jpeg" alt="Trabajo 14"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina6.jpeg" alt="Trabajo 15"></div>
+            <div class="item" data-category="cocina"><img src="assets/cocinas/cocina7.jpeg" alt="Trabajo 16"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio1.jpg" alt="Trabajo 17"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio2.jpg" alt="Trabajo 18"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio3.jpg" alt="Trabajo 19"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio4.jpg" alt="Trabajo 20"></div>
+            <div class="item" data-category="lab"><img src="assets/muebles_laboratorio/laboratorio5.jpg" alt="Trabajo 21"></div>
+            <div class="item" data-category="living"><img src="assets/living/living1.jpg" alt="Trabajo 22"></div>
+            <div class="item" data-category="living"><img src="assets/living/living2.jpg" alt="Trabajo 23"></div>
+            <div class="item" data-category="living"><img src="assets/living/living3.jpg" alt="Trabajo 24"></div>
+            <div class="item" data-category="living"><img src="assets/living/living4.jpg" alt="Trabajo 25"></div>
+            <div class="item" data-category="living"><img src="assets/living/living5.jpg" alt="Trabajo 26"></div>
+            <div class="item" data-category="living"><img src="assets/living/living6.jpg" alt="Trabajo 27"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina1.jpg" alt="Trabajo 28"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina2.jpg" alt="Trabajo 29"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina3.jpg" alt="Trabajo 30"></div>
+            <div class="item" data-category="ofi"><img src="assets/oficinas/oficina4.jpg" alt="Trabajo 31"></div>
+            <div class="item" data-category="placard"><img src="assets/placards/placard1.jpg" alt="Trabajo 32"></div>
+            <div class="item" data-category="placard"><img src="assets/placards/placard2.jpg" alt="Trabajo 33"></div>
+            <div class="item" data-category="placard"><img src="assets/placards/placard3.jpg" alt="Trabajo 34"></div>
+            <div class="item" data-category="tabla"><img src="assets/tablas/tabla1.jpeg" alt="Trabajo 35"></div>
+            <div class="item" data-category="tabla"><img src="assets/tablas/tabla2.jpeg" alt="Trabajo 36"></div>
+            <div class="item" data-category="tabla"><img src="assets/tablas/tabla3.jpeg" alt="Trabajo 37"></div>
         </div>
         <div class="d-md-none" id="nextBtn">
             <svg width="42" height="42" viewBox="0 0 24 24" fill="none">
@@ -187,29 +212,31 @@
     </section>
 
     <section class="contacto" id="contacto">
-        <div class="contacto-primera-linea">
-          <div class="contacto-txt">
-            <h2 class="titulo">Trabajemos <br>juntos!</h2>
-            <p>amoeller@gmail.com</p>
-            <div>
-                <a href="https://www.instagram.com/"><i class="fab fa-instagram icon-circle"></i></a>
-                <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin icon-circle"></i></a>
-                <a href="https://www.instagram.com/"><i class="fab fa-whatsapp icon-circle"></i></a>
-            </div>
-          </div>
-          <div class="img-contacto">
-              <img src="assets/manos_carpintero.jpg" alt="">
-          </div>
-        </div>
-         <hr>
-         
-    
-          <footer>
-            <p class="fw-regular">© 2025 - InterHaus Design. <br class="oculto"> All rights reserved. <br>
-            Design by <strong><a style="text-decoration: none; color: var(--color-muted);" href="https://melfistudioweb.com.ar/">Melfi Studio Web & Design</a></p></strong>
-          </footer>
+  <div class="contacto-primera-linea">
+    <div class="contacto-txt">
+      <h2 class="titulo">Trabajemos <br>juntos!</h2>
+      <p>amoeller@gmail.com</p>
+      <div>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram icon-circle"></i></a>
+        <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin icon-circle"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-whatsapp icon-circle"></i></a>
+      </div>
+    </div>
 
-    </section>
+    <!-- LINEA VERTICAL -->
+    <div class="linea-vertical"></div>
+
+    <div class="img-contacto">
+      <img src="assets/manos_carpintero.jpg" alt="">
+    </div>
+  </div>
+
+  <footer>
+    <p class="fw-regular">© 2025 - InterHaus Design. <br class="oculto"> All rights reserved. <br>
+    Design by <strong><a style="text-decoration: none; color: var(--color-muted);" href="https://melfistudioweb.com.ar/">Melfi Studio Web & Design</a></strong></p>
+  </footer>
+</section>
+
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const offcanvasEl = document.getElementById("menuLateral");
