--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css?v=1.6">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -117,14 +118,14 @@
   </div>
   <div class="personas">
     <div class="persona">
-      <img src="/assets/foto_alb.jpeg" alt="">
+      <img src="assets/foto_alb.jpeg" alt="">
       <div class="titles">
         <p class="title">Alberto</p>
         <p class="subtitle">Rol</p>
       </div>
     </div>
     <div class="persona persona1">
-      <img src="/assets/foto_sergio.jpg" alt="">
+      <img src="assets/foto_sergio.jpg" alt="">
       <div class="titles">
         <p class="title">Sergio</p>
         <p class="subtitle">Rol</p>
@@ -345,32 +346,53 @@
             </svg>
         </div>
     </section>
-
+<!--
     <section class="contacto" id="contacto">
   <div class="contacto-primera-linea">
     <div class="contacto-txt">
       <h2 class="titulo">Trabajemos <br>juntos!</h2>
-      <p>amoeller@gmail.com</p>
       <div>
-        <a href="https://www.instagram.com/"><i class="fab fa-instagram icon-circle"></i></a>
-        <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin icon-circle"></i></a>
-        <a href="https://www.instagram.com/"><i class="fab fa-whatsapp icon-circle"></i></a>
+      <p>Arquitecto Alberto Moeller <br>
+        <a class="contact-icon" href="https://wa.me/5491121595231"><i class="fab fa-whatsapp icon-circle"></i></a>
+        <a class="contact-icon" href="https://mail.google.com/mail/?view=cm&to=moellerdesign@gmail.com"><i class="fab fa-google icon-circle"></i></a>
+       1121595231 <br>
+      moellerdesign@gmail.com</p>
+      </div>
+      <hr>
+      <div>
+        <p>Sergio Antonio Graziano <br>
+        <a class="contact-icon" href="https://wa.me/541155113032"><i class="fab fa-whatsapp icon-circle"></i></a>
+        <a class="contact-icon" href="https://mail.google.com/mail/?view=cm&to=sergioantoniograziano2008@yahoo.com.ar"><i class="fab fa-google icon-circle"></i></a>
+         1155113032 <br>
+        sergioantoniograziano2008@yahoo.com.ar</p>
+      </div>
+    <div>
+</section>
+-->
+  <section class="contacto">
+    <div class="contacto-txt">
+      <h1 class="titulo">Trabajemos<br>juntos!</h1>
+      <p>amoeller@gmail.com</p>
+      <div class="contact-icon">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
       </div>
     </div>
 
-    <!-- LINEA VERTICAL -->
-    <div class="linea-vertical"></div>
+      <div class="linea-vertical"></div>
 
     <div class="img-contacto">
-      <img src="assets/manos_carpintero.jpg" alt="">
+      <img src="assets/manos_carpintero.jpg" alt="Imagen de carpintería" />
     </div>
-  </div>
+  </section>
+    <footer>
+      <p class="fw-regular">© 2025 - InterHaus Design. <br class="oculto"> All rights reserved. <br>
+        Design by <strong><a style="text-decoration: none; color: var(--color-muted);" href="https://melfistudioweb.com.ar/">Melfi Studio Web & Design</a></strong></p>
+    </footer>
 
-  <footer>
-    <p class="fw-regular">© 2025 - InterHaus Design. <br class="oculto"> All rights reserved. <br>
-    Design by <strong><a style="text-decoration: none; color: var(--color-muted);" href="https://melfistudioweb.com.ar/">Melfi Studio Web & Design</a></strong></p>
-  </footer>
-</section>
+          <!--LINEA VERTICAL
+    <div class="linea-vertical"></div>-->
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
