--- a/index.html
+++ b/index.html
@@ -346,38 +346,27 @@
             </svg>
         </div>
     </section>
-<!--
-    <section class="contacto" id="contacto">
-  <div class="contacto-primera-linea">
-    <div class="contacto-txt">
-      <h2 class="titulo">Trabajemos <br>juntos!</h2>
-      <div>
-      <p>Arquitecto Alberto Moeller <br>
-        <a class="contact-icon" href="https://wa.me/5491121595231"><i class="fab fa-whatsapp icon-circle"></i></a>
-        <a class="contact-icon" href="https://mail.google.com/mail/?view=cm&to=moellerdesign@gmail.com"><i class="fab fa-google icon-circle"></i></a>
-       1121595231 <br>
-      moellerdesign@gmail.com</p>
-      </div>
-      <hr>
-      <div>
-        <p>Sergio Antonio Graziano <br>
-        <a class="contact-icon" href="https://wa.me/541155113032"><i class="fab fa-whatsapp icon-circle"></i></a>
-        <a class="contact-icon" href="https://mail.google.com/mail/?view=cm&to=sergioantoniograziano2008@yahoo.com.ar"><i class="fab fa-google icon-circle"></i></a>
-         1155113032 <br>
-        sergioantoniograziano2008@yahoo.com.ar</p>
-      </div>
-    <div>
-</section>
--->
-  <section class="contacto">
+    
+  <section id="contacto" class="contacto">
     <div class="contacto-txt">
       <h1 class="titulo">Trabajemos<br>juntos!</h1>
-      <p>amoeller@gmail.com</p>
       <div class="contact-icon">
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <p>Arquitecto Alberto Moeller <br>
+        <a class="" href="https://wa.me/5491121595231"><i class="fab fa-whatsapp icon-circle"></i></a>
+        <a class="" href="https://mail.google.com/mail/?view=cm&to=moellerdesign@gmail.com"><i class="fab fa-google icon-circle"></i></a>
+       <!--1121595231 <br>
+      moellerdesign@gmail.com</p>-->
       </div>
+      <hr> 
+      <div>
+        <p>Sergio Antonio Graziano <br>
+        <a class="" href="https://wa.me/541155113032"><i class="fab fa-whatsapp icon-circle"></i></a>
+        <a class="" href="https://mail.google.com/mail/?view=cm&to=sergioantoniograziano2008@yahoo.com.ar"><i class="fab fa-google icon-circle"></i></a>
+       <!-- 1155113032 <br>
+        sergioantoniograziano2008@yahoo.com.ar</p>-->
+      </div>
+      </div>
+
     </div>
 
       <div class="linea-vertical"></div>
