--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
   </div>
   <div class="offcanvas-body">
     <ul class="nav flex-column">
-      <li class="nav-item"><a style="color: #232A3A;" class="nav-link fs-5" href="#about">Quién soy</a>
+      <li class="nav-item"><a style="color: #232A3A;" class="nav-link fs-5" href="#quienes">Quiénes somos</a></li>
+      <li class="nav-item"><a style="color: #232A3A;" class="nav-link fs-5" href="#about-mobile">Antecedentes personales</a>
       <li class="nav-item"><a style="color: #232A3A;" class="nav-link fs-5" href="#works">Trabajos</a></li>
       <li class="nav-item"><a style="color: #232A3A;" class="nav-link fs-5" href="#contacto">Contacto</a></li>
     </ul>
@@ -198,7 +199,7 @@
 
 <section id="about-mobile">
       <div class="texto-about">
-    <h1 class="titulo">¿QUIÉN SOY?</h1></div>
+    <h1 class="titulo">ANTECEDENTES PERSONALES</h1></div>
         <div class="about-filter">
             <button class="filter-btnAbout active" data-category="arg">Argentina</button>
             <button class="filter-btnAbout" data-category="ita">Italia</button>
