--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
   </style>
 </head>
-<body>
+<body style="background-color: #9EA6BA;">
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- Bootstrap JS -->
@@ -51,7 +51,7 @@
   <div class="offcanvas-body">
     <ul class="nav flex-column">
       <li class="nav-item"><a style="color: #232A3A;" class="nav-link fs-5" href="#quienes">Quiénes somos</a></li>
-      <li class="nav-item"><a style="color: #232A3A;" class="nav-link fs-5" href="#about-mobile">Antecedentes personales</a>
+      <li class="nav-item"><a style="color: #232A3A;" class="nav-link fs-5" href="#about-mobile">Antecedentes</a>
       <li class="nav-item"><a style="color: #232A3A;" class="nav-link fs-5" href="#works">Trabajos</a></li>
       <li class="nav-item"><a style="color: #232A3A;" class="nav-link fs-5" href="#contacto">Contacto</a></li>
     </ul>
