--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css?v=1.2">
+    <link rel="stylesheet" href="styles.css?v=1.3">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
@@ -67,7 +67,8 @@
       </div>
         <nav>
             <ul>
-                <a href="#about">QUIEN SOY</a>
+                <a href="#about">QUIÉNES SOMOS</a>
+                <a href="#about">ANTECEDENTES</a>
                 <a href="#works">TRABAJOS</a>
                 <a href="#contacto">CONTACTO</a>
             </ul>
@@ -121,15 +122,15 @@
     <div class="persona">
       <img src="assets/foto_alb.jpeg" alt="">
       <div class="titles">
-        <p class="title">Alberto</p>
-        <p class="subtitle">Rol</p>
+        <p class="title">Alberto Moeller</p>
+        <p class="subtitle">Arquitecto</p>
       </div>
     </div>
     <div class="persona persona1">
       <img src="assets/foto_sergio.jpg" alt="">
       <div class="titles">
-        <p class="title">Sergio</p>
-        <p class="subtitle">Rol</p>
+        <p class="title">Sergio Antonio Graziano</p>
+        <p class="subtitle">Marketing & Administracion</p>
       </div>
     </div>
   </div>
@@ -169,21 +170,21 @@
       <p class="subtitle">San Carlos de Bariloche</p>
     </div>
     <p class="parrafo">
-      -Jefe de Diseño Industrial INVAP (1986-1989) <br>
-      -Remodelacion Hotel LLao LLao (1991-1992) <br>
-      -Obras Particulares (1984-2025) <br>
+      Jefe de Diseño Industrial INVAP (1986-1989) <br>
+      Remodelacion Hotel LLao LLao (1991-1992) <br>
+      Obras Particulares (1984-2025) <br>
     </p>
     <div class="titles">
       <p class="subtitle">Pcia. de Santa Cruz</p>
     </div>
     <p class="parrafo">
-      -Barrios de Viviendas Industrializadas (Sistema americano CORAT INC) (1989-1990)
+      Barrios de Viviendas Industrializadas (Sistema americano CORAT INC) (1989-1990)
     </p>
     <div class="titles">
         <p class="subtitle">Capital Federal y Zona Norte</p>
     </div>
     <p class="parrafo">
-      -Equipamientos integrales de viviendas unifamiliares (2009-2025)
+      Equipamientos integrales de viviendas unifamiliares (2009-2025)
     </p>
   </div>
   <div class="card-about">
@@ -192,7 +193,7 @@
       <p class="subtitle">Provincia</p>
     </div>
     <p class="parrafo">
-      -INTERDESIGN SRL, Diseño y elaboracion de equipamientos de viviendas, negocios y laboratorios (1998-2008)</p>
+      INTERDESIGN SRL: Diseño y elaboracion de equipamientos de viviendas, negocios y laboratorios (1998-2008)</p>
   </div>
   </div>
 </section>
@@ -233,21 +234,21 @@
                 <p class="subtitle">San Carlos de Bariloche</p>
               </div>
               <p class="parrafo">
-                -Jefe de Diseño Industrial INVAP (1986-1989) <br>
-                -Remodelacion Hotel LLao LLao (1991-1992) <br>
-                -Obras Particulares (1984-2025) <br>
+                Jefe de Diseño Industrial INVAP (1986-1989) <br>
+                Remodelacion Hotel LLao LLao (1991-1992) <br>
+                Obras Particulares (1984-2025) <br>
               </p>
               <div class="titles">
                 <p class="subtitle">Pcia. de Santa Cruz</p>
               </div>
               <p class="parrafo">
-                -Barrios de Viviendas Industrializadas (Sistema americano CORAT INC) (1989-1990)
+                Barrios de Viviendas Industrializadas (Sistema americano CORAT INC) (1989-1990)
               </p>
               <div class="titles">
                   <p class="subtitle">Capital Federal y Zona Norte</p>
               </div>
               <p class="parrafo">
-                -Equipamientos integrales de viviendas unifamiliares (2009-2025)
+                Equipamientos integrales de viviendas unifamiliares (2009-2025)
               </p>
             </div>
             </div>
@@ -258,7 +259,7 @@
                   <p class="subtitle">Provincia</p>
                 </div>
                 <p class="parrafo">
-                  -INTERDESIGN SRL, Diseño y elaboracion de equipamientos de viviendas, negocios y laboratorios (1998-2008)</p>
+                  INTERDESIGN SRL: Diseño y elaboracion de equipamientos de viviendas, negocios y laboratorios (1998-2008)</p>
               </div>
             </div>
            
