--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- Logo y nombre -->
     <div class="container-logo d-flex align-items-center">
-      <img src="assets/Logo_BARRA.png" alt="Logo" width="30" height="30" class="logo">
+      <img src="assets/logo_barra.png" alt="Logo" width="30" height="30" class="logo">
     </div>
 
     <!-- Botón hamburguesa -->
